--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
+    "lint": "eslint src/**/*.{ts,js,vue}",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,7 +14,14 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^17.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-vue": "^2.3.1",
+    "eslint": "^8.13.0",
+    "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-vue": "^8.6.0",
+    "sass": "^1.50.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
     "vue-tsc": "^0.29.8"
