--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,9 +8,17 @@
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"]
+    "lib": ["esnext", "dom"],
+    "types": ["vite/client", "@types/jest"],
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ],
+      "~@/*": [
+        "./src/assets/*"
+      ]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
